5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1723_2508.log
== TEST (2019-05-14 10:48:02) 
-- CODE:
n = float(input("Numero: "))
soma = 
i = 1
fim = n
while (i<fim):
	soma = soma +((-1)**(i+1)*(4/(i*2)*(i*2+1)*(i*2+2)))
	i = i+1
print(round(soma,8))
-- ERROR:
File "XXXX", line 2
    soma = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:12) 
-- CODE:
n = float(input("Numero: "))
soma = 3
i = 1
fim = n
while (i<fim):
	soma = soma +((-1)**(i+1)*(4/(i*2)*(i*2+1)*(i*2+2)))
	i = i+1
print(round(soma,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:48:19) 
-- CODE:
n = float(input("Numero: "))
soma = 3
i = 1
fim = n
while (i<fim):
	soma = soma +((-1)**(i+1)*(4/(i*2)*(i*2+1)*(i*2+2)))
	i = i+1
print(round(soma,8))
-- EXECUTION TIME:
0.18017
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
-10.66666667
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
105.8655618
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
-66.3354407
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:48:38) 
-- CODE:
n = float(input("Numero: "))
soma = 3
i = 1
fim = n
while (i<fim):
	soma = soma +((-1)**(i+1)*(4/(i*2)*(i*2+1)*(i*2+2)))
	i = i+1
print(round(soma,8))
-- OUTPUT:
-10.66666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 21:14:16) 
-- CODE:
from math import*
n = float(input("Numero: "))
soma = 3
i = 2
j = 0
while (1<n):
	soma = soma +(4/(i*(i+1)*(i+2))) *(-1)**j
	j = j+1
	i = i+2
	n = n-1
print(round(soma,8))
-- EXECUTION TIME:
0.246772
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
